2001-09-17  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/gdalallregister.cpp: register doq2 format ... it seems to 
	have been omitted.

2001-09-15  Frank Warmerdam  <warmerdam@pobox.com>

	* configure.in: modified --with-libz handling as per bug 75, to be
	more standard.

	http://bugzilla.remotesensing.org/show_bug.cgi?id=76

===============================================================================
	
2001-09-15  Frank Warmerdam  <warmerdam@pobox.com>

	* Release GDAL 1.1.5.

	* Modify include order in most GNUmakefiles to ensure that 
	include paths for system stuff (like /usr/local/include) don't take
	priority over application include files in GDAL tree.  Especially
	important when there is an old GDAL already installed.

	* ogr/ogrsf_frmts/mitab: Upgraded to include fast spatial query 
	support, and attribute query support.

2001-09-06  Frank Warmerdam  <warmerdam@pobox.com>

	* bridge: upgrade bridge error reporting, add GCP functions.

2001-09-04  Frank Warmerdam  <warmerdam@pobox.com>

	* ogr/ogrsf_frmts/shape: added support for deferred determination
	of output file geometry type (from first feature), and added better
	handling of NULL attribute fields when reading and writing. 

2001-08-31  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/ceos2/sar_ceosdataset.cpp: added support for the SAR Toolbox
	(from Alaska SAR Facility) naming convension for CEOS files. 

2001-08-30  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/ceos2/sar_ceosdataset.cpp: added four corner support for ERS
	products with map projection record.

2001-08-29  Frank Warmerdam  <warmerdam@pobox.com>

	* ogr/ogrsf_frmts/ntf: add support for GType 5 - add ntfstroke.cpp.

	* frmts/GNUmakefile: fix so that failure of a submake will
	terminate the frmts level make.

2001-08-23  Frank Warmerdam  <warmerdam@pobox.com>

	* ogr/ogr_fromepsg.cpp: fixed serious bug translating LCC projections
	from EPSG to WKT. 

2001-08-22  Frank Warmerdam  <warmerdam@pobox.com>
