@@ -78,7 +78,8 @@ NOTE: Implemented as <tt>gdal/frmts/raw/doq1dataset.cpp</tt>.<p>
 <h2><a name="DOQ2">DOQ2 -- New Labelled USGS DOQ</a></h1>
 
 Support for read access, including reading of an affine georeferencing 
-transform, and capture of the projection string.   This format is the new,
+transform, capture of the projection string and reading of other auxilary
+fields as metadata.   This format is the new,
 labelled DOQ (Digital Ortho Quad) format from the USGS.<p>
 
 This driver was implemented by Derrick J Brashear.<p>
